set plugin install dir

--- a/home/tmux/.config/tmux/tmux.conf
+++ b/home/tmux/.config/tmux/tmux.conf
@@ -8,9 +8,10 @@ bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
-set -g @plugin 'seebi/tmux-colors-solarized'
-set -g @colors-solarized 'light'
+set -g @plugin "seebi/tmux-colors-solarized"
+set -g @colors-solarized "light"
 
 # mkdir -p ~/.local/share/tmux/plugins
-# git clone https://github.com/tmux-plugins/tpm ~/.local/share/tmux/plugins/tpm
-run '~/.local/share/tmux/plugins/tpm/tpm'
+# git clone https://github.com/tmux-plugins/tpm ~/.local/share/tmux/tpm
+set-environment -g TMUX_PLUGIN_MANAGER_PATH "~/.local/share/tmux/plugins"
+run "~/.local/share/tmux/tpm/tpm"
