--- a/home/tmux/.config/tmux/tmux.conf
+++ b/home/tmux/.config/tmux/tmux.conf
@@ -1,17 +1,20 @@
 set -g mouse on
 
+set -g pane-border-status top
+set -g pane-border-format " #{pane_current_command} "
+
 # Support true colors.
-set -ag terminal-overrides ",xterm-256color:RGB"
+# https://gist.github.com/andersevenrud/015e61af2fd264371032763d4ed965b6
+set -ag terminal-overrides ,xterm-256color:RGB
+set -ag terminal-overrides ,alacritty:RGB
 
 # Open windows and splits into the current directory.
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
-set -g @plugin "seebi/tmux-colors-solarized"
-set -g @colors-solarized "light"
+# Do not ask confirmation before closing windows and panes.
+bind-key & kill-window
+bind-key x kill-pane
 
-# mkdir -p ~/.local/share/tmux/plugins
-# git clone https://github.com/tmux-plugins/tpm ~/.local/share/tmux/tpm
-set-environment -g TMUX_PLUGIN_MANAGER_PATH "~/.local/share/tmux/plugins"
-run "~/.local/share/tmux/tpm/tpm"
+source-file ~/.config/tmux/plugins.conf
