alacritty*tmux is not for me

--- a/home/tmux/.config/tmux/plugins.conf
+++ b/home/tmux/.config/tmux/plugins.conf
@@ -19,4 +19,7 @@ set-environment -g TMUX_PLUGIN_MANAGER_PATH ~/.local/share/tmux/plugins
 set -g @plugin seebi/tmux-colors-solarized
 set -g @colors-solarized light
 
+# tmux-plugins/tmux-yank
+set -g @plugin 'tmux-plugins/tmux-yank'
+
 run ~/.local/share/tmux/tpm/tpm
