--- a/home/alacritty/.config/alacritty/alacritty.yml
+++ b/home/alacritty/.config/alacritty/alacritty.yml
@@ -1,12 +1,17 @@
 import:
-  - ~/.config/alacritty/solarized_light.yml
+  - ~/.config/alacritty/solarized_light_theme.yml
 
+# Start a new tmux session for each new Alacritty window.
 shell:
   program: /bin/zsh
   args:
     - --login
     - -c
     - '[[ "$(command -v tmux)" ]] && tmux'
+
+# Disable back scrolling to and let tmux manage it.
+scrolling:
+  history: 0
 
 window:
   decorations: buttonless
@@ -23,7 +28,7 @@ key_bindings:
   # Override the default SpawnNewInstance, which fills the dock with Alacritty
   # instances.
   - { key: N, mods: Command, action: CreateNewWindow }
-    # Set tmux controls using iTerm2 shortcuts.
+    # Set tmux controls using macOS-style shortcuts.
   - { key: T, mods: Command, chars: "\x02\x63" } # C-b + c (new window)
   - { key: Left, mods: Command, chars: "\x02\x70" } # C-b + p (previous window)
   - { key: Right, mods: Command, chars: "\x02\x6e" } # C-b + n (next window)
