--- a/home/tmux/.config/tmux/tmux.conf
+++ b/home/tmux/.config/tmux/tmux.conf
@@ -1,5 +1,3 @@
-set -g mouse on
-
 set -g pane-border-status top
 set -g pane-border-format " #{pane_current_command} "
 
@@ -16,5 +14,8 @@ bind % split-window -h -c "#{pane_current_path}"
 # Do not ask confirmation before closing windows and panes.
 bind-key & kill-window
 bind-key x kill-pane
+
+set -g mouse on
+unbind-key -T copy-mode-vi MouseDragEnd1Pane
 
 source-file ~/.config/tmux/plugins.conf
